--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -237,7 +237,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
-			<artifactId>docker-java-transport-okhttp</artifactId>
+			<artifactId>docker-java-transport-zerodep</artifactId>
 			<version>${version.dockerjava}</version>
 		</dependency>
 		<dependency>
@@ -260,6 +260,49 @@
 			<artifactId>maven-artifact</artifactId>
 			<version>${version.maven.artifact}</version>
 		</dependency>
+
+		<!-- fixed patched dependencies -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${version.commons.io}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>${version.commons.compress}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${version.snakeyaml}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.woodstox</groupId>
+            <artifactId>woodstox-core</artifactId>
+            <version>${version.woodstox}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${version.google.guava}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <version>${version.netty}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-resolver-dns</artifactId>
+            <version>${version.netty}</version>
+        </dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${version.logback.classic}</version>
+		</dependency>
+
 
 		<!-- Test dependencies -->
 
