--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.36.redhat-00003</version>
+			<version>1.7.36</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
