--- a/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
@@ -146,9 +146,10 @@ Resources:
             #!/bin/bash -x
             set -eu -o pipefail
             apt-get update && apt-get install -y \
+                python3-setuptools \
                 python3-pip \
                 ec2-instance-connect
-            pip3 install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-py3-latest.tar.gz
+            pip3 install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-py3-latest.tar.gz --break-system-packages
 
             cfn-init --region ${AWS::Region} --stack ${AWS::StackId} --resource OpenviduServerPro
 
