--- a/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
+++ b/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
@@ -159,6 +159,12 @@ Resources:
         - Key: Name
           Value: !Ref AWS::StackName
       KeyName: AWS_KEY_NAME
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeType: gp3
+            DeleteOnTermination: true
+            VolumeSize: 12
       UserData:
         "Fn::Base64":
           !Sub |
