--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -16,14 +16,14 @@ RUN apt-get update && apt-get -y upgrade && \
     iproute2 \
     lsb-release \
     maven \
-    openjdk-21-jdk-headless \
+    openjdk-21-jdk \
     rsync \
     software-properties-common \
     sudo && \
     # Node
     mkdir -p /etc/apt/keyrings && \
     curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | sudo gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    NODE_MAJOR=20 && \
+    NODE_MAJOR=22 && \
     echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list && \
     apt-get update && apt-get install nodejs -y && \
     # Node
