--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -35,6 +35,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^19.0.0",
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "~19.1.7",
     "@angular/compiler-cli": "^19.1.6",
