--- a/openvidu-components-angular/angular.json
+++ b/openvidu-components-angular/angular.json
@@ -155,17 +155,19 @@
 			"sourceRoot": "src",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist/openvidu-webcomponent-rc",
-						"index": "src/index.html",
-						"main": "src/app/openvidu-webcomponent/openvidu-webcomponent.main.ts",
+						"outputPath": {
+              "base": "dist/openvidu-webcomponent-rc"
+            },
+            "index": "src/index.html",
 						"polyfills": ["zone.js"],
 						"tsConfig": "src/app/openvidu-webcomponent/tsconfig.openvidu-webcomponent.json",
 						"aot": true,
 						"assets": ["src/favicon.ico"],
 						"styles": ["src/app/openvidu-webcomponent/openvidu-webcomponent.component.scss"],
-						"scripts": []
+            "scripts": [],
+            "browser": "src/app/openvidu-webcomponent/openvidu-webcomponent.main.ts"
 					},
 					"configurations": {
 						"production": {
@@ -179,9 +181,7 @@
 							"outputHashing": "none",
 							"sourceMap": false,
 							"namedChunks": false,
-							"extractLicenses": true,
-							"vendorChunk": false,
-							"buildOptimizer": true,
+              "extractLicenses": true,
 							"budgets": [
 								{
 									"type": "initial",
