--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -9,9 +9,9 @@
     "@angular/platform-browser": "19.2.8",
     "@angular/platform-browser-dynamic": "19.2.8",
     "@angular/router": "19.2.8",
-    "@livekit/track-processors": "0.3.2",
+    "@livekit/track-processors": "^0.5.6",
     "autolinker": "4.0.0",
-    "livekit-client": "2.5.2",
+    "livekit-client": "2.11.4",
     "rxjs": "7.8.1",
     "tslib": "2.7.0",
     "zone.js": "^0.15.0"
@@ -23,8 +23,6 @@
     "@angular/compiler-cli": "19.2.8",
     "@angular/elements": "19.2.8",
     "@compodoc/compodoc": "^1.1.25",
-    "@types/dom-mediacapture-transform": "0.1.9",
-    "@types/dom-webcodecs": "0.1.11",
     "@types/jasmine": "^5.1.4",
     "@types/node": "20.12.14",
     "@types/selenium-webdriver": "4.1.16",
