--- a/openvidu-components-angular/projects/openvidu-components-angular/tsconfig.lib.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/tsconfig.lib.json
@@ -5,7 +5,7 @@
 		"outDir": "../../dist/openvidu-components-angular",
 		"module": "esnext",
 		"moduleResolution": "node",
-		"lib": ["ES2020", "dom"],
+		"lib": ["ES2020", "DOM"],
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"declaration": true,
@@ -14,7 +14,8 @@
 		"inlineSources": true,
 		"resolveJsonModule": true,
 		"types": ["jasmine", "node"],
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true
 	},
 	"exclude": ["node_modules", "src/test.ts", "**/*.spec.ts", "**/*.mock.ts"]
 }
