--- a/openvidu-components-angular/tsconfig.base.json
+++ b/openvidu-components-angular/tsconfig.base.json
@@ -14,6 +14,6 @@
 		"module": "es2020",
 		"lib": ["es2021", "dom"],
 		"allowSyntheticDefaultImports": true,
-		"skipLibCheck": true
+		"skipLibCheck": true // Livekit track processors fails with typescript types checking
 	}
 }
