ov-components: update package dependencies and TypeScript configurations
- Added @types/dom-mediacapture-transform to package.json for type definitions.
- Changed hoveringTimeout type in StreamComponent to ReturnType<typeof setTimeout> for better type safety.
- Updated TypeScript lib version from ES2020 to ES2021 in tsconfig files for improved features.
- Included dom-mediacapture-transform in types for TypeScript configurations across various tsconfig files.
- Removed empty types array in tsconfig.app.json to ensure proper type checking.
- Adjusted skipLibCheck settings in tsconfig files to improve compatibility with Livekit track processors.

--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -10,6 +10,7 @@
     "@angular/platform-browser-dynamic": "19.2.8",
     "@angular/router": "19.2.8",
     "@livekit/track-processors": "^0.5.6",
+    "@types/dom-mediacapture-transform": "^0.1.11",
     "autolinker": "4.0.0",
     "livekit-client": "2.11.4",
     "rxjs": "7.8.1",
